<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <TextView
        android:id="@+id/text_visor"
        android:layout_width="match_parent"
        android:layout_height="@dimen/visor_size"
        android:text="@string/visor_string"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_result"
        android:layout_width="match_parent"
        android:layout_height="@dimen/visor_size"
        android:textSize="@dimen/text_size"
        android:text="@string/visor_string"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_visor" />

    <Button
        android:id="@+id/button_zero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_zero"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_point"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_point"
        app:layout_constraintStart_toEndOf="@id/button_zero"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_equal" />

    <Button
        android:id="@+id/button_equal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_equal"
        app:layout_constraintStart_toEndOf="@id/button_point"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_plus" />

    <Button
        android:id="@+id/button_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_plus"
        app:layout_constraintStart_toEndOf="@id/button_equal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_one"
        app:layout_constraintBottom_toTopOf="@+id/button_zero"
        app:layout_constraintEnd_toStartOf="@+id/button_two"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_two"
        app:layout_constraintStart_toEndOf="@id/button_one"
        app:layout_constraintBottom_toTopOf="@+id/button_point"
        app:layout_constraintEnd_toStartOf="@+id/button_three" />

    <Button
        android:id="@+id/button_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_three"
        app:layout_constraintStart_toEndOf="@id/button_two"
        app:layout_constraintBottom_toTopOf="@id/button_equal"
        app:layout_constraintEnd_toStartOf="@+id/button_less" />

    <Button
        android:id="@+id/button_less"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_less"
        app:layout_constraintBottom_toTopOf="@+id/button_plus"
        app:layout_constraintStart_toEndOf="@id/button_three"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_four"
        app:layout_constraintBottom_toTopOf="@+id/button_one"
        app:layout_constraintEnd_toStartOf="@+id/button_five"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_five"
        app:layout_constraintStart_toEndOf="@id/button_four"
        app:layout_constraintBottom_toTopOf="@+id/button_two"
        app:layout_constraintEnd_toStartOf="@+id/button_six" />

    <Button
        android:id="@+id/button_six"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_six"
        app:layout_constraintStart_toEndOf="@id/button_five"
        app:layout_constraintBottom_toTopOf="@+id/button_three"
        app:layout_constraintEnd_toStartOf="@+id/button_multiplication" />

    <Button
        android:id="@+id/button_multiplication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_multiplication"
        app:layout_constraintStart_toEndOf="@id/button_six"
        app:layout_constraintBottom_toTopOf="@+id/button_less"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_seven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_seven"
        app:layout_constraintBottom_toTopOf="@+id/button_four"
        app:layout_constraintEnd_toStartOf="@id/button_eight"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_eight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_eight"
        app:layout_constraintBottom_toTopOf="@id/button_five"
        app:layout_constraintEnd_toStartOf="@id/button_nine"
        app:layout_constraintStart_toEndOf="@id/button_seven" />

    <Button
        android:id="@+id/button_nine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_nine"
        app:layout_constraintBottom_toTopOf="@id/button_six"
        app:layout_constraintEnd_toStartOf="@id/button_divide"
        app:layout_constraintStart_toEndOf="@id/button_eight" />

    <Button
        android:id="@+id/button_divide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_divide"
        app:layout_constraintBottom_toTopOf="@id/button_multiplication"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_nine" />

    <Button
        android:id="@+id/button_clear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_clear"
        app:layout_constraintBottom_toTopOf="@+id/button_seven"
        app:layout_constraintEnd_toEndOf="@+id/button_eight"
        app:layout_constraintStart_toStartOf="@+id/button_seven" />

    <Button
        android:id="@+id/button_clear_all"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_clear_all"
        app:layout_constraintBottom_toTopOf="@+id/button_divide"
        app:layout_constraintEnd_toEndOf="@+id/button_divide"
        app:layout_constraintStart_toStartOf="@+id/button_nine" />

</androidx.constraintlayout.widget.ConstraintLayout>